Refactor api.
